--- a/FrontEnd/Principal/CSS/principal.css
+++ b/FrontEnd/Principal/CSS/principal.css
@@ -734,8 +734,9 @@ body {
   position: sticky;
   top: 60px;
   height: calc(100vh - 80px);
-  overflow-y: auto;
+  overflow-y: hidden; /* Altere de 'auto' para 'hidden' */
 }
+
 
 .event-card {
   display: flex;
