--- a/FrontEnd/Principal/CSS/principal.css
+++ b/FrontEnd/Principal/CSS/principal.css
@@ -18,6 +18,7 @@
   --shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
   --card-radius: 8px;
   --transition: all 0.3s ease;
+  --incoming-msg-bg: #21262d; /* ADICIONADO  */
 }
 
 [data-theme="light"] {
@@ -37,6 +38,7 @@
   --success: #31a24c;
   --border-color: #dddfe2;
   --shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  --incoming-msg-bg: #e4e6eb; /* ADICIONADO  */
 }
 
 * {
@@ -266,7 +268,7 @@ body {
 /* Sidebar Styles */
 .sidebar {
   position: sticky;
-  top: 74px; /* Ajustado para a altura do topbar */
+  top: 74px;
   height: calc(100vh - 84px);
   overflow-y: auto;
   display: flex;
@@ -439,6 +441,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  min-width: 0;
 }
 
 .post-creator {
@@ -574,7 +577,7 @@ body {
   flex-direction: column;
   gap: 1rem;
   position: sticky;
-  top: 74px; /* Ajustado */
+  top: 74px;
   height: calc(100vh - 84px);
   overflow-y: hidden;
 }
@@ -762,7 +765,6 @@ body {
   .sidebar:not(.mobile-hidden) { transform: translateX(0); }
   .user-dropdown .dropdown-menu { width: 180px; }
 
-  /* ADICIONADO: Esconde os ícones de Início e Mensagens no mobile */
   .nav-icon[data-tooltip="Início"],
   .nav-icon[data-tooltip="Mensagens"] {
     display: none;
